using UnityEngine.Animations;
namespace OnPipe
{
    /// <summary>
    /// Data container for Animator Parameters.
    /// </summary>
    public static class AnimParams 
    {
        public static string ScaleDown = "scale_down";
        public static string ScaleUp = "scale_up";
        public static string FailOrWin = "fail_or_win";
    }
}